--- a/mod_image_resize.conf
+++ b/mod_image_resize.conf
@@ -1,9 +1,9 @@
 # Configuration for mod_image_resize Apache module
 
-<IfModule mod_image_resize.c>
-    # Load the module if not already loaded
-    LoadModule image_resize_module /usr/lib/apache2/modules/mod_image_resize.so
+# Load module
+LoadModule image_resize_module /usr/lib/apache2/modules/mod_image_resize.so
 
+<IfModule mod_image_resize.c>
     # Create alias for images directory
     Alias /images /var/www/images
 
