--- a/mod_image_resize.conf
+++ b/mod_image_resize.conf
@@ -27,7 +27,7 @@ LoadModule image_resize_module /usr/lib/apache2/modules/mod_image_resize.so
         ImageResizeCacheMaxAge 86400
         
         # Enable debug logging (On/Off)
-        ImageResizeDebug Off
+        ImageResizeDebug On
     </Location>
 
     # MIME type support for different image formats
