Add required log level resize logs

--- a/mod_image_resize.conf
+++ b/mod_image_resize.conf
@@ -35,4 +35,6 @@ LoadModule image_resize_module /usr/lib/apache2/modules/mod_image_resize.so
     AddType image/png .png
     AddType image/gif .gif
     AddType image/webp .webp
+
+    LogLevel debug
 </IfModule>
