Config: redure quality, change location module handler, remove unused alias

--- a/mod_image_resize.conf
+++ b/mod_image_resize.conf
@@ -4,11 +4,8 @@
 LoadModule image_resize_module /usr/lib/apache2/modules/mod_image_resize.so
 
 <IfModule mod_image_resize.c>
-    # Create alias for images directory
-    Alias /images /var/www/images
-
     # Handler configuration
-    <Location /images>
+    <Location /resized>
         SetHandler image-resize
         
         # Source images directory
@@ -18,10 +15,10 @@ LoadModule image_resize_module /usr/lib/apache2/modules/mod_image_resize.so
         ImageResizeCacheDir /var/cache/apache2/image_resize
         
         # JPEG compression quality (0-100)
-        ImageResizeJpegQuality 85
+        ImageResizeJpegQuality 70
         
         # PNG compression quality (min max, 0-100)
-        ImageResizePngQuality 65 80
+        ImageResizePngQuality 65 75
         
         # Cache lifetime in seconds (1 day = 86400)
         ImageResizeCacheMaxAge 86400
@@ -36,5 +33,6 @@ LoadModule image_resize_module /usr/lib/apache2/modules/mod_image_resize.so
     AddType image/gif .gif
     AddType image/webp .webp
 
+    # Level required to have module logging
     LogLevel debug
 </IfModule>
