--- a/mod_image_resize.conf
+++ b/mod_image_resize.conf
@@ -14,11 +14,8 @@ LoadModule image_resize_module /usr/lib/apache2/modules/mod_image_resize.so
         # Cache directory for resized images
         ImageResizeCacheDir /var/cache/apache2/image_resize
         
-        # JPEG compression quality (0-100)
-        ImageResizeJpegQuality 70
-        
-        # PNG compression quality (min max, 0-100)
-        ImageResizePngQuality 65 75
+        # Compression quality (0-100)
+        ImageResizeQuality 70
         
         # Cache lifetime in seconds (1 day = 86400)
         ImageResizeCacheMaxAge 86400
