Cache mutex on write operation only, and add directive to disable it

--- a/mod_image_resize.conf
+++ b/mod_image_resize.conf
@@ -22,6 +22,9 @@ LoadModule image_resize_module /usr/lib/apache2/modules/mod_image_resize.so
         
         # Enable debug logging (On/Off)
         ImageResizeDebug On
+
+        # Enable mutex for cache operations (On/Off)
+        ImageResizeMutex On
     </Location>
 
     # MIME type support for different image formats
