Add ImageResizeCheckMTime config, to regenerate modified images

--- a/mod_image_resize.conf
+++ b/mod_image_resize.conf
@@ -25,6 +25,9 @@ LoadModule image_resize_module /usr/lib/apache2/modules/mod_image_resize.so
 
         # Enable mutex for cache operations (On/Off)
         ImageResizeMutex On
+
+        # Check if source image is newer than cached image (On/Off)
+        ImageResizeCheckMTime Off
     </Location>
 
     # MIME type support for different image formats
