Remove 'ImageResizeDebug' setting, rely now only on Loglevel from Apache

--- a/mod_image_resize.conf
+++ b/mod_image_resize.conf
@@ -20,9 +20,6 @@ LoadModule image_resize_module /usr/lib/apache2/modules/mod_image_resize.so
         # Cache lifetime in seconds (1 day = 86400)
         ImageResizeCacheMaxAge 86400
         
-        # Enable debug logging (On/Off)
-        ImageResizeDebug On
-
         # Enable mutex for cache operations (On/Off)
         ImageResizeMutex On
 
@@ -36,6 +33,6 @@ LoadModule image_resize_module /usr/lib/apache2/modules/mod_image_resize.so
     AddType image/gif .gif
     AddType image/webp .webp
 
-    # Level required to have module logging
-    LogLevel debug
+    # Level required to have all logging information
+    LogLevel info
 </IfModule>
