--- a/debian/control
+++ b/debian/control
@@ -41,7 +41,7 @@ Depends: ${shlibs:Depends},
          libglib2.0-0,
          libexpat1,
          libexif12,
-         libtiff6,
+         libtiff5 | libtiff6,
          libwebp7,
          libgsf-1-114,
          liblcms2-2,
